--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,14 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background: url('Login.jpg') no-repeat center center fixed;
-    background-size: cover;
+    background: url('img.jpg') no-repeat center center fixed;
+    background-size: cover; /* Ensure the background image covers the entire container */
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden; 
+    overflow: hidden; /* Disable scrolling */
 }
-
 .login-container {
     background: rgba(255, 255, 255, 0.8);
     padding: 20px;
