--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background: url('img.jpg') no-repeat center center fixed;
+    background: url('Login.jpg') no-repeat center center fixed;
     background-size: cover; /* Ensure the background image covers the entire container */
     height: 100vh;
     display: flex;
